# AFS

./: .gitignore  AFS-Validator.spec  README.md  build_macos.sh  config.example.toml  interface.py  main.py  pyproject.toml  requirements.txt  uv.toml
.github/workflows/: build.yml
controllers/: main_controller.py
dist-test/: Info.plist
icon/: icon.icns
interface_elements/: menu.py
models/: config_manager.py  email_service.py  json_validator.py  payload_builder.py
views/: email_view.py  flet_email_view.py  flet_menu_view.py  flet_settings_view.py  flet_settings_window.py  flet_validate_json_window.py  flet_view.py  main_view.py  menu_view.py  notification_popup.py  settings_view.py  settings_window.py  validate_json_window.py
