[project]
name = "afs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentmail==0.4.5",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "jsonschema==4.26.0",
    "pillow>=12.1.1",
    "pyinstaller>=6.19.0",
    "python-dotenv==1.2.2",
    "toml==0.10.2",
]
